revise unit 15 without jamovi demo

--- a/15-Factor-Analysis.qmd
+++ b/15-Factor-Analysis.qmd
@@ -5,16 +5,16 @@
 source("header.R")
 ```
 
-> **譯者註** 20240108初步以Claude-2.1完成翻譯，內容待編修。
+> **譯者註** 20240129完成jamovi示範之外的編修。
 
 
 <!---Previous chapters have covered statistical tests for differences between two or more groups. However, sometimes when conducting research, we may wish to examine how multiple variables *co-vary*. That is, how they are related to each other and whether the patterns of relatedness suggest anything interesting and meaningful. For example, we are often interested in exploring whether there are any underlying unobserved latent factors that are represented by the observed, directly measured, variables in our dataset. In statistics, latent factors are initially hidden variables that are not directly observed but are rather inferred (through statistical analysis) from other variables that are observed (directly measured).
 
 In this chapter we will consider a number of different Factor Analysis and related techniques, starting with [Exploratory Factor Analysis] (EFA). EFA is a statistical technique for identifying underlying latent factors in a data set. Then we will cover [Principal Component Analysis] (PCA) which is a data reduction technique which, strictly speaking, does not identify underlying latent factors. Instead, PCA simply produces a linear combination of observed variables. Following this, the section on [Confirmatory Factor Analysis] (CFA) shows that, unlike EFA, with CFA you start with an idea - a model - of how the variables in your data are related to each other. You then test your model against the observed data and assess how good a fit the model is. A more sophisticated version of CFA is the so-called [Multi-Trait Multi-Method CFA] approach in which both latent factor and method variance are included in the model. This is useful when there are different methodological approaches used for measurement and therefore method variance is an important consideration. Finally, we will cover a related analysis: [Internal consistency reliability analysis] tests how consistently a scale measures a psychological construct. --->
 
-前幾章涵蓋了不同兩個或多個組之間的統計檢定。但是,有時在進行研究時,我們可能希望檢查多個變項如何共變。也就是說,它們彼此之間的關係以及這些關聯性的模式是否顯示出有趣和有意義的東西。例如,我們經常有興趣探索是否存在任何潛在的未觀察到的潛在因素,這些因素是通過我們資料集中直接測量的可觀察變項表示的。在統計學中,潛在因素最初是隱藏變項,不是直接觀察的,而是通過從其他觀察到的(直接測量的)變項推斷出來的。
+前幾個單元介紹的統計檢定方法主要是處理兩個或多個研究組之間的差異，不過有時候的研究目的是檢定多個變項的*共變*。也就是探討變項之間的關係,以及有關聯的變項所構成的模式是否有趣和有意義的東西。例如,研究者經常有興趣探索是否存在任何潛在的未觀察到的因素,這些因素是從直接測量的可觀察變項資料而揭露的。潛在因素的統計學定義是一開始為隱藏變項,不是直接觀察的,而是經由其他直接觀察或測量的變項推斷出來。
 
-在本章中,我們將考慮不同的因素分析和相關技術,首先是[探索性因素分析] (EFA)。EFA是一種統計技術,用于識別資料集中的潛在潛在因素。然後,我們將介紹[主成分分析](PCA),它是一種資料的縮減方式,嚴格來說,它並沒有識別潛在的潛在因素。相反,PCA僅僅產生觀察變項的線性組合。在這之後,[驗證性因素分析](CFA)部分表明,與EFA不同,使用CFA,您從一個想法開始——一個模型——關於您的資料中的變項彼此之間的關係。然後,您根據觀察到的資料檢驗您的模型,並評估模型的適配程度。 CFA的一個更複雜的版本是所謂的[多種特質多項相關驗證性因素分析]方法,其中包含了模型中的潛在因素和方法方差。當使用不同的方法學方法進行測量並且方法方差是一個重要的考慮因素時,這很有用。最後,我們將介紹一項相關分析:[內部一致性信度分析]測試一種量表衡量心理結構的一致性。
+這個單元將介紹幾種因素分析和相關技術,首先是[探索性因素分析] (EFA)。EFA是一種統計技術,用於識別潛藏在資料裡的潛在因素。然後是[主成分分析](PCA),這是一種縮減資料變項的方法,嚴格來說,這種方法無法識別潛藏的潛在因素,僅用來建構觀察變項的線性組合。接著是[驗證性因素分析](CFA),CFA與EFA不同之處是，前者從一個想法開始檢定資料中的變項之間的關係，所謂想法通常是一個模型。然後根據觀察到的資料檢驗模型,並評估模型的適配程度。CFA有一個種較複雜的版本–[多種特質多項相關驗證性因素分析],包括檢定模型內的潛在因素和方法之間的變異。這種方法有用的原因是當研究者使用不同測量方法，那麼方法之間的變異就是一個重要的因素。最後要介紹的是[內部一致性信度分析]，這種相關分析是測試一種量表所評估之心理結構一致性。
 
 ## 探索性因素分析 
 
@@ -24,14 +24,14 @@ In @fig-fig15-1 each observed variable $V$ is 'caused' to some extent by the und
 
 Latent factor underlying the relationship between several observed variables--->
 
-**探索性因素分析(EFA)** 是一種統計技術,用于發現可以從我們的觀察數據中推斷出的任何隱藏的潛在因素。這種技術計算一組測量變量(例如$V1、V2、V3、V4$ 和 $V5$)在多大程度上可以表示為對潛在潛在因素的測量。這種潛在因素不能通過只有一個觀察變量來測量,而是體現在它導致的一組觀察變量中的關係中。  
+**探索性因素分析(EFA)**是一種可以從觀察資料推斷出任何隱藏的潛在因素的統計技術，這種方法的原理是計算一組測量變項(例如$V_1、V_2、V_3、V_4$ 和 $V_5$)在多大程度上可以構成潛在因素的測量尺度。這種潛在因素不能只用一個觀察變項來測量,而是體現於受影響的一組觀察變項構成的關係網路。
 
-在 @fig-fig15-1 中,每个觀察變量 $V$ 在一定程度上是由潛在因素($F$)“導致的”,這是係數 $b\_1$ 到 $b\_5$(也稱為因子負荷)表示。 每个觀察變量也有一個相關的錯誤項,e1 到 e5。 每個錯誤項是与之相關的觀察變量 $V\_i$ 中无法用潛在因素来解釋的方差。  
+以 @fig-fig15-1 來說，每個觀察變項 $V_i$ 都在一定程度上受到潛在因素($F$)的影響，影響力用係數 $b_1$ 到 $b_5$(也稱為因子負荷)表示。每個觀察變項$V_i$都有一個誤差項,也就是$e_1$ 到 $e_5$，代表與潛在因素無關的資料料誤差。  
 
 
 ```{r}
 #| label: fig-fig15-1
-#| fig-cap: 隱含於幾個觀察變項之間的潛在因素  
+#| fig-cap: 隱藏於數個觀察變項之間的潛在因素  
 knitr::include_graphics("images/fig15-1.png")
 ```
 
@@ -44,13 +44,13 @@ In exploratory factor analysis (EFA), we are essentially exploring the correlati
 
 [^factor-analysis-1]: Quite helpfully, factor loadings can be interpreted like standardized regression coefficients --->
 
-在心理學中,潛在因素表示難以直接觀察或測量的心理現象或構造。 例如,個性,智力或思維方式。 在 @fig-fig15-1 的示例中,我們可能已經就他們的行為或態度向人們提出了五個具體問題,并且從中我們能夠瞭解一種名為外向性的個性構造。 一組不同的具體問題可能會給我們提供有關個人內向性或盡責性的信息。
+心理學的潛在因素通常是難以直接觀察或測量的心理現象或構造，像是個性,智力或思考模式。以 @fig-fig15-1 來說，觀察變項可以是五個請參與者回答的行為或態度之具體問題,影響五個問題的潛在因素可能是一種被學者稱為外向性的性格，另一組問題則可能受到內向性或責任感等潛在因素的影響。
 
-這裡有另一個示例:我們可能無法直接測量統計焦慮,但是我們可以通過一系列問卷中的問題測量統計焦慮是否高或低。例如,“$Q1$:完成統計課程中的作業”,“$Q2$:試圖理解期刊文章中描述的統計”,和“$Q3$:向講師請教課程中不理解之處的幫助”等等,每个從低焦慮到高焦慮評分。 因為他們的高統計焦慮,統計焦慮较高的人往往會給出类似的高回應。 同樣,由于他們的統計焦慮較低,統計焦慮較低的人會給出這些變量的类似低回應。
+這裡還有另一個範例:有一個測量統計焦慮的問卷，雖然統計焦慮無法直接測量，不過問卷中的每個問題能測量因統計課作業引發的一部分焦慮感。例如,“$Q1$:完成統計課程中的作業”,“$Q2$:試圖理解期刊文章中描述的統計”,和“$Q3$:向講師請教課程中不理解之處的幫助”等等，填答者從低焦慮到高焦慮給每題一個評分。若填答者有明顯的統計焦慮，每一題會傾向給較高的評分；反之，如果填答者沒有太明顯的統計焦慮，每一題會傾向給較低的評分。
 
-在探索性因素分析(EFA)中,我們本質上是探索變量之間的相關以發現變量之間的共變所識別的任何有趣和重要的潛在(潛在)因素。 我們可以使用統計軟件來估計任何潛在因素,並確定在每个因素上具有較高載荷[^factor-analysis-1](例如載荷> 0.5)的變量,這表明它們是潛在因素的一个有用測量或指標。 這個過程的一部分包括一個名為旋轉的步驟,老實說這是一个相當奇怪的想法,但由于我們不必擔心理解它,這很方便; 我們只需要知道它很有用,因為它使得不同因素上的載荷模式清晰得多。 因此,旋轉有助于更清楚地看到哪些變量在實質上與每个因素相聯繫。 我們還需要決定根據數據我們需要多少因素是合理的,這方面幫助我們的東西就是所謂的特徵值。 我們稍後会回到這一點,在我们介紹了一些 EFA 的主要假設之後。
+探索性因素分析的本質是探索變項之間的相關性，從變項之間的共變關係識別任何有趣和重要的潛在因素。使用統計軟體可以評估任何潛在因素,以及與受潛在因素影響的每個變項的因素負荷量[^factor-analysis-1]。例如因素負荷量 > 0.5的變項，很可能是測量潛在因素的有效指標。計算因素負荷量的過程之一稱為**轉軸法(rotation)**，這是一個目前不好懂的名詞，好在目前讀者不需要理解這個過程，只要知道轉軸能清理不同因素對同一組變項的因素負荷量。經過轉軸法的處理，能清楚地看到哪些變項與每個潛在因素有實質的關聯性。此外，還要決定需要多少因素才能合理解釋資料，這就需要計算**特徵值**(Eigen value)。介紹[探索性因素分析的執行條件]之後，我們再回來討論這些名詞。
 
-[^factor-analysis-1]: 很有幫助的是,因子負荷可以像標準化迴歸係數一樣解釋
+[^factor-analysis-1]: 因素負荷量的解讀方式如同標準化迴歸係數。
 
 ### 探索性因素分析的執行條件
 
@@ -59,9 +59,11 @@ In exploratory factor analysis (EFA), we are essentially exploring the correlati
 The second assumption is **sampling adequacy** and is checked using the Kaiser-MeyerOlkin (KMO) Measure of Sampling Adequacy (MSA). The KMO index is a measure of the proportion of variance among observed variables that might be common variance. Using partial correlations, it checks for factors that load just two items. We seldom, if ever, want EFA producing a lot of factors loading just two items each. KMO is about sampling adequacy because partial correlations are typically seen with inadequate samples. If the KMO index is high ($\approx 1$), the EFA is efficient whereas if KMO is low ($\approx 0$), the EFA is not relevant. KMO values smaller than $0.5$ indicates that EFA is not suitable and a KMO value of $0.6$ should be present before EFA is considered suitable. Values between $0.5$ and $0.7$ are considered adequate, values between $0.7$ and $0.9$ are good and values between $0.9$ and $1.0$ are excellent. --->
 
 
-需要在分析的一部分中檢查一些預設條件。第一個預設條件是**球形性**,它基本上是檢查您的數據集中的變量之間是否相關,以至於可以用更少的因素來概括。巴特利球形性檢驗是用于檢驗觀測相關矩陣是否與零(或空)相關矩陣顯著不同。所以,如果巴特利檢驗顯著($p < .05$),這表明觀測相關矩陣顯著不同於空矩陣,因此適合 EFA。  
+需要檢查的第一個執行條件是**球形性*,這是檢查資料變項之間的相關性,相關的變項越多就可以用越少潛在因素解釋。巴特利球形檢驗是用來檢驗變項的相關矩陣，是否顯著不同於零相關矩陣。如果巴特利檢驗結果有達到顯著($p < .05$),表示反應變項之間有關聯性，可使用探索性因素分析。  
 
-第二個預設條件是**抽樣適度性**,並通過KMO抽樣適度性測度(KMO)進行檢查。 KMO 指數是觀察變量之間可能是公共變異的變異數的測量值。 通過偏相關檢查只載入兩個項目的因素。 我們很少(如果不是從未)希望 EFA 產生大量只載入兩個項目的因素。 KMO 與抽樣適度性有關,因為偏相關通常見於樣本不足。 如果 KMO 指數較高($ \approx 1$),則 EFA 是有效的;如果 KMO 較低($ \approx 0$),則 EFA 是不相關的。 KMO 值小於 $0.5$ 表示 EFA 不適用,KMO 值為 $0.6$ 時才考慮 EFA 適用。 $0.5$ 和 $0.7$ 之間的值被認為是適中的,$0.7$ 和 $0.9$ 之間的值是好的,$0.9$ 和 $1.0$ 之間的值是極好的。  
+第二個要檢查的執行條件是**樣本適足性**,這是使用Kaiser-Meyer-Olkin樣本適足量數(簡稱KMO)做為評估指標。KMO樣本適足量數代表觀察變項之間的共變佔總變異量的比例。
+因為通常報告呈現的潛在因素，很少納入只能解釋兩個變項的因素，因為這代表樣本不足。如果存在只影響兩個變項的因素，可計算部分相關係數。如果 KMO 量數偏高($ \approx 1$),可認定因素分析結果有效;如果 KMO 量數偏低($ \approx 0$),則因素分析結果找到的潛在因素與變項不相關。 KMO 量數小於 $0.5$ 表示因素分析結果不適用,KMO 值為 $0.6$ 時才會認定因素分析結果是低度適用。 $0.5$ 和 $0.7$ 之間的值被認為是中度適用,$0.7$ 和 $0.9$ 之間的值是高度適用,$0.9$ 和 $1.0$ 之間的值是非常適用。
+
 
 
 ### 探索性因素分析的用途
@@ -77,17 +79,17 @@ In the first option each item's contribution to the combined score depends on ho
 
 A more advanced statistical technique, one which is beyond the scope of this book, undertakes regression modelling where latent factors are used in prediction models of other latent factors. This is called "structural equation modelling" and there are specific software programmes and R packages dedicated to this approach. But let's not get ahead of ourselves; what we should really focus on now is how to do an EFA in jamovi. --->
 
-如果 EFA 提供了好的解決方案(即因素模型),那麼我們需要決定對嶄新的因素要做什麼。研究人員經常在心理測量量表開發期間使用 EFA。 他們將開發與一個或多個心理結構相關的問卷項目池,使用 EFA 檢視哪些項目作為潛在因素“聚在一起”,然後評估是否應刪除某些項目,因為它們沒有有用或清楚地測量其中一個潛在因素。  
+如果因素分析結果確立了適用的因素模型,接著需要決定如何處理結果顯現的新因素。EFA通常用來開發心理測量量表，研究人員會先建立與單一與多種心理特質有關的問卷題庫，收集次料後 EFA 檢視哪些題目是"聚斂於"一種潛在因素,然後評估是否應刪除沒有清楚測出任何一個潛在因素的某些題目。
 
-與這種方法一致,EFA 的另一個後果是將載入不同因素的變量合併為因子得分,有時稱為量表分數。有兩種選擇將變量合併為量表分數的方法:
+EFA的另一種用途是將因素負荷量高的變項合併為因素分數,有時可稱為量表分數。有兩種方法能將合併的變項資料轉為量表分數 :
 
-- 按每個對因素作出貢獻的項目的因子負荷加權創建新的變量。 
+- 創建新變項代表要計分的因素，合併為一份量表的變項分數按照因素負荷量加權調整。 
 
-- 基於對因素作出貢獻的每個項目創建一個新的變量,但將它們等權重。  
+- 創建新變項代表要計分的因素，合併為一份量表的變項分數均權調整。
 
-在第一種選擇中,每個項目對合併分數的貢獻取決於它與因素的關係強度。 在第二種選擇中,我們通常只是在所有實質上對一個因素作出貢獻的項目上取平均值來創建合併的量表分數變量。 選擇哪種方法取決於個人喜好,儘管第一種選擇的一個缺點是負荷量在不同樣本之間會有很大不同,而在行為和健康科學領域,我們經常有興趣開發和使用不同研究和不同樣本之間的綜合問卷量表分數。 在這種情況下,使用基於等量貢獻的實質性項目而不是使用來自不同樣本的特定樣本的負荷加權的綜合測量是合理的。 在任何情況下,理解作為項目平均值的合併變量測量都比使用特定樣本的最佳加權組合更簡單、更直觀。  
+第一種方法的每個變項對合併分數的貢獻取決於與因素的關係強度。第二種方法就是拿所有受到同一因素實質影響的變項，取變項平均值做為合併的量表分數。何種方法較好沒有參考標準，只是第一種方法的缺點是因素負荷量會隨樣本檢源改變。行為和健康科學的研究人員經常會開發和使用於不同研究場景，或不同對象的綜合問卷。這種問卷的量表分數適合用第二種方法較合理，因為是基於等量貢獻的實質變項，而不是使用來自不同來源的特定樣本的負荷量加權。其實在任何研究問題，用變項平均值當成合併變項的測量較簡單，而且比較直觀。  
 
-一種更高級的統計技術(超出本書範圍)進行迴歸建模,其中潛在因素用於預測其他潛在因素的模型。 這稱為“結構方程式建模”,並且有專門的軟件程序和 R 程序包專注於這種方法。 但是,讓我們不要操之過急; 我們現在真正應該關注的重點是如何在 jamovi 中進行 EFA。
+還有一種使用迴歸式建立因素模型的進階方法，這是使用潛在因素預測其他潛在因素。這種方法就是“結構方式模型”(structural equation modelling)，已經有專門的軟體和R套件能執行這種方法。不過讀者還不必急著去學，現在先學好如何用 jamovi 執行 EFA。
 
 
 ### 使用jamovi完成探索性因素分析
@@ -109,9 +111,9 @@ A sample of $N=250$ responses is contained in the dataset *bfi_sample.csv* . As 
 Twenty-five observed variable items organised by five putative personality factors in the dataset bfi\_sample.csv
 --->
 
-首先,我們需要一些資料。<a href="http://ipip.ori.org" target="\_blank">國際個性項目庫</a>中的25個人格自我報告項目(見@fig-fig15-2)作為基於網絡的人格評估合成孔徑人格評估(SAPA:<a href="http://sapa-project.org" target="\_blank">http://sapa-project.org</a>)項目的一部分。25個項目由五個假定因素組織:親和力、盡責性、外向性、神經質和開放性。  
+在此使用取自 <a href="http://ipip.ori.org" target="_blank">國際性格量表題庫</a>的25項人格自我報告題目(請見 @fig-fig15-2 )， 組合的網路性格問卷–合成孔徑性格量表(SAPA:<a href="http://sapa-project.org" target="_blank">http://sapa-project.org</a>)其中一部分資料做為範例。25個題目假設受五個因素影響:親和性(Agreeableness)、盡責性(Conscientiousness)、外向性(Extraversion)、神經質(Neuroticism)和開放性(Openness)。  
 
-使用6點響應量表收集了項目數據:  
+每個題目都是6點量表紀錄參與者的反應資料:  
 
 1.非常不準確  
 
@@ -125,12 +127,12 @@ Twenty-five observed variable items organised by five putative personality facto
 
 6.非常準確。  
 
-資料檔案_bfi\_sample.csv_包含了$N=250$的響應樣本。作為研究人員,我們有興趣探索數據,看看是否有一些由_bfi\_sample.csv_檔案中的$25$個觀察變項合理測量的潛在潛在因素。打開數據集并檢查這$25$個變項是否編碼為連續變項(技術上它們是排序的,雖然對於jamovi中的EFA大多數情況並不重要,除非您決定計算加權因子分數,在這種情况下需要連續變項)。在jamovi中執行EFA:  
+資料檔案*bfi\_sample.csv*包括$N=250$份參與者樣本(lsj檔案庫Personality Questionnaire)。研究人員有興趣的，是看看檔案中的$25$個觀察變項，有那些能合理測量的潛在因素。請先開啟這份檔案檢查這$25$個變項是否以連續變項編碼？(至少要用次序變項編碼，雖然jamovi的EFA模組可以處理。若是要用因素負荷加權計算因素分數，就需要先轉換為連續變項)。接著執行jamovi的EFA模組：  
 
 
 ```{r}
 #| label: fig-fig15-2
-#| fig-cap: 在資料檔案bfi\_sample.csv中由五個假定人格因素組織的25個觀察變項  
+#| fig-cap: 資料檔案bfi\_sample.csv的25個假設可測量五大性格因素的題目
 knitr::include_graphics("images/fig15-2.png")
 ```
 
@@ -147,7 +149,6 @@ jamovi EFA assumption checks for the personality questionnaire data
 
 --->
 
-这是“使用jamovi完成探索性因素分析”第二段的原文。生成的繁体中文翻译如下:
 
 - 從主要jamovi按鈕欄中選擇“因素”- “探索性因素分析”以打開EFA分析窗口(@fig-fig15-3)。
 
@@ -166,7 +167,7 @@ knitr::include_graphics("images/fig15-3.png")
 ```{r}
 #| label: fig-fig15-4
 #| classes: .enlarge-image
-#| fig-cap: jamovi人格問卷數據的EFA預設檢查
+#| fig-cap: jamovi人格問卷資料的EFA預設檢查
 knitr::include_graphics("images/fig15-4.png")
 ```
 
@@ -185,19 +186,19 @@ Scree plot of the personality data in jamovi EFA, showing a noticeable inflectio
 
 首先,檢查預設條件(@fig-fig15-4)。您可以看到(1)巴特利球形性檢驗顯著,所以滿足這個預設條件;和(2)抽樣適度性測度(MSA)的總體KMO測度為$0.81$,這表明了很好的抽樣適度性。這裡沒有問題!  
 
-下一件要檢查的事情是使用多少因素(或從數據中“提取”多少因素)。有三種不同的方法:   
+下一件要檢查的事情是使用多少因素(或從資料中“提取”多少因素)。有三種不同的方法:   
 
 - 一個公約是選擇所有特徵值大於1的組件2。這會給我們四個因素(嘗試一下)。   
 
 - 如@fig-fig15-5所示,檢查斜率圖可以幫助您識別“拐點”。這是斜率曲線明顯趨於平緩的點,在“肘部”以下。这會给我们的数据五个因素。解釋斜率圖有點藝術性:在@fig-fig15-5中,從$5$個到$6$個因素有一個明顯的跨度,但是在您查看的其他斜率圖中,情況並不會那么清晰。   
 
-- 使用平行分析技術,獲得的特徵值與從隨機數據獲得的特徵值進行比較。 提取的因素數量是特徵值大於隨機數據中找到的值的數量。   
+- 使用平行分析技術,獲得的特徵值與從隨機資料獲得的特徵值進行比較。 提取的因素數量是特徵值大於隨機資料中找到的值的數量。   
 
 
 
 ```{r}
 #| label: fig-fig15-5
-#| fig-cap: 在jamovi EFA 中顯示人格數據的斜率圖,顯示在點5(“肘部”)后明顯拐點和趨於平緩   
+#| fig-cap: 在jamovi EFA 中顯示人格資料的斜率圖,顯示在點5(“肘部”)后明顯拐點和趨於平緩   
 knitr::include_graphics("images/fig15-5.png")
 ```
 
@@ -214,7 +215,7 @@ Factor summary statistics and correlations for a five factor solution in jamovi 
 
 與此同時,我們還應考慮最佳旋轉最終解决方案的最佳方法。旋轉有兩種主要方法:正交(例如“varimax”)旋轉強制所選因素不相關,Whereas斜交(例如“oblimin”)旋轉允許所選因素相關。心理學家和行為科學家感興趣的維度通常並非我們希望正交的維度,因此斜交解決方案可以說更加合理[^factor-analysis-2]  
 
-[^factor-analysis-2]: 斜交旋轉提供了兩個因子矩陣,一個稱為結構矩陣,一個稱為模式矩陣。 在jamovi中,結果中只顯示模式矩陣,因為這通常對解釋最有用,儘管一些專家建議两者都很有幫助。 在結構矩陣中,係數顯示變量與因素之間的關係,同時忽略該因素與所有其他因素的關係(即零階相關)。 模式矩陣係數顯示因素對變量的獨特貢獻,同時控制該變量上其他因素的影響(類似於標准化偏迴歸係數)。 在正交旋轉下,結構和模式係數是相同的。  
+[^factor-analysis-2]: 斜交旋轉提供了兩個因子矩陣,一個稱為結構矩陣,一個稱為模式矩陣。 在jamovi中,結果中只顯示模式矩陣,因為這通常對解釋最有用,儘管一些專家建議两者都很有幫助。 在結構矩陣中,係數顯示變項與因素之間的關係,同時忽略該因素與所有其他因素的關係(即零階相關)。 模式矩陣係數顯示因素對變項的獨特貢獻,同時控制該變項上其他因素的影響(類似於標准化偏迴歸係數)。 在正交旋轉下,結構和模式係數是相同的。  
 
 
 ```{r}
@@ -241,15 +242,15 @@ Factor loadings for a five factor solution in jamovi EFA
 
 從實踐的角度來看,如果在斜交旋轉中發現因素之間存在顯著相關(正相關或負相關,並且大於0.3),如@fig-fig15-6所示,其中提取的兩個因素之間的相關為0.31,那麼這將證實我們更喜歡斜交旋轉的直覺。如果這些因素確實相關,那麼斜交旋轉將產生比正交旋轉更好的真實因素估計和更好的簡單結構。而且,如果斜交旋轉表明各因素之間的相關接近零,那麼研究人員可以繼續進行正交旋轉(這時應給出與斜交旋轉大致相同的解決方案)。
 
-在檢查提取因素之間的相關時,至少有一個相關大於0.3(@fig-fig15-6),因此更喜歡提取的五個因素的斜交(“oblimin”)旋轉。我們還可以在@fig-fig15-6中看到,五個因素解釋的資料總變異數的比例為46%。第一因素解釋了大約10%的變異,第二至第四因素解釋了大約9%的變異,第五因素解釋了略多於7%的變異。這並不是很好;如果整體解釋我們數據中的更多變異那會更好。 
+在檢查提取因素之間的相關時,至少有一個相關大於0.3(@fig-fig15-6),因此更喜歡提取的五個因素的斜交(“oblimin”)旋轉。我們還可以在@fig-fig15-6中看到,五個因素解釋的資料總變異數的比例為46%。第一因素解釋了大約10%的變異,第二至第四因素解釋了大約9%的變異,第五因素解釋了略多於7%的變異。這並不是很好;如果整體解釋我們資料中的更多變異那會更好。 
 
 請注意,在每個EFA中,您可以潛在地具有與觀察變項數量相同的因素,但是您包含的每個附加因素都會增加更小量的解釋變異數量。如果前几个因素解释了原始25 个變項中的大量方差,那麼這些因素顯然是25 个變項的一個有用、更简单的替代品。您可以放心刪除其餘部分,而不會失去太多原始變異性。但是如果需要18個因素(例如)來解釋這25個變項中的大部分變異數,那麼您不如直接使用原始的25個變項。
 
 @fig-fig15-7顯示了因子負荷。也就是說,25個不同的人格項目如何在五個選定的因素上加載。我們隱藏了小於0.3的負荷(設置在@fig-fig15-3中顯示的選項中)。  
 
-對於因素$1、2、3$和$4$,因子負荷的模式與@fig-fig15-2中指定的假定因素緊密匹配。太好了!第5個因素也相當接近,五個被認為測量“開放性”的觀察變項中有四個在該因素上載入得相當好。但是,變量$04$似乎並不太適合,因為@fig-fig15-7中的因子解决方案表明它載入到因素$4$上(儘管載荷相對較低),但沒有實質上載入到因素$5$上。  
+對於因素$1、2、3$和$4$,因子負荷的模式與@fig-fig15-2中指定的假定因素緊密匹配。太好了!第5個因素也相當接近,五個被認為測量“開放性”的觀察變項中有四個在該因素上載入得相當好。但是,變項$04$似乎並不太適合,因為@fig-fig15-7中的因子解决方案表明它載入到因素$4$上(儘管載荷相對較低),但沒有實質上載入到因素$5$上。  
 
-需要注意的另一件事情是,在@fig-fig15-2中標記為“R:反向編碼”的那些變量是那些具有負因子負荷的變量。查看項目A1(“漠不關心他人的感受”)和A2(“詢問他人的幸福”)。我們可以看到,$A1$的高分表示親和力較低,Whereas $A2$(和所有其他“A”變項)的高分表示親和力較高。因此,A1將與其他“A”變項負相關,這就是為什麼它在@fig-fig15-7中具有負因子負荷。
+需要注意的另一件事情是,在@fig-fig15-2中標記為“R:反向編碼”的那些變項是那些具有負因子負荷的變項。查看項目A1(“漠不關心他人的感受”)和A2(“詢問他人的幸福”)。我們可以看到,$A1$的高分表示親和力較低,Whereas $A2$(和所有其他“A”變項)的高分表示親和力較高。因此,A1將與其他“A”變項負相關,這就是為什麼它在@fig-fig15-7中具有負因子負荷。
 
 
 ```{r}
@@ -280,11 +281,11 @@ Compute new scale score variable using the jamovi Computed variable command
 
 我們也可以在 @fig-fig15-7 中看到每個變項的“獨特性”。獨特性是指變項中“獨特”的變異比例,而不是被因子所描述的 [^factor-analysis-3]。例如,“A1”中有 72% 的變異沒有被五因子解中的因子描述。相反,“N1”的無法被因子解描述的變異相對較低(35%)。請注意,“獨特性”越高,該變項在因子模式中的相關性或貢獻越低。  
 
-[^factor-analysis-3]: 在因子分析中有時會報告“公因性”,這是變項中能夠被因子解描述的變異量。獨特性等於 (1 $\\sim$ 公因性)
+[^factor-analysis-3]: 在因子分析中有時會報告“公因性”,這是變項中能夠被因子解描述的變異量。獨特性等於 (1 $\sim$ 公因性)
 
-說實話,在探索性因子分析中得到這樣整潔的解決方案並不尋常。結果通常會混亂得多,而解析因子的意義也更具挑戰性。很少會有這樣清晰劃分的變項池。您會有大量的觀測變項,您認為它們可能是少數潛在因子的指標,但是您並不如此強烈地知道哪些變項將會到哪裡!  
+說實話,在探索性因子分析中得到這樣整潔的解決方案並不尋常。結果通常會混亂得多,而解析因子的意義也更具挑戰性。很少會有這樣清晰劃分的變項池。您會有大量的反應變項,您認為它們可能是少數潛在因子的指標,但是您並不如此強烈地知道哪些變項將會到哪裡!  
 
-所以,我們似乎有一個相當好的五因子解,儘管它描述了相對較低的整體變異比例。假設我們對這個解決方案滿意,並希望在進一步分析中使用因子。直接的選擇是計算每個因子的整體平均分數。例如,對於數據集中的每個人的親和力因子,這涉及添加 $A1 + A2 + A3 + A4 + A5$,然後除以 5 [^factor-analysis-4]。我們計算的因子得分是基於每個包含變項的等權得分。我們可以通過兩個步驟在 jamovi 中執行:
+所以,我們似乎有一個相當好的五因子解,儘管它描述了相對較低的整體變異比例。假設我們對這個解決方案滿意,並希望在進一步分析中使用因子。直接的選擇是計算每個因子的整體平均分數。例如,對於資料集中的每個人的親和力因子,這涉及添加 $A1 + A2 + A3 + A4 + A5$,然後除以 5 [^factor-analysis-4]。我們計算的因子得分是基於每個包含變項的等權得分。我們可以通過兩個步驟在 jamovi 中執行:
 
 [^factor-analysis-4]: 必要時先進行某些變項的反向計分  
 
@@ -314,7 +315,7 @@ jamovi option for factor scores for the five factor solution, using the 'Bartlet
 Data sheet view showing the five newly created factor score variables
 --->
 
-另一個選擇是創建一個**最佳加權**的因子分數指數。要做到這一點,使用“保存” - “因子分數”複選框將因子分數保存到數據集。一旦您這樣做,您將看到已經向數據添加了5個新變量(列),每個提取的因子一列。請參見@fig-fig15-10和@fig-fig15-11。
+另一個選擇是創建一個**最佳加權**的因子分數指數。要做到這一點,使用“保存” - “因子分數”複選框將因子分數保存到資料集。一旦您這樣做,您將看到已經向資料添加了5個新變項(列),每個提取的因子一列。請參見@fig-fig15-10和@fig-fig15-11。
 
 
 ```{r}
@@ -327,7 +328,7 @@ knitr::include_graphics("images/fig15-10.png")
 ```{r}
 #| label: fig-fig15-11
 #| classes: .enlarge-image
-#| fig-cap: 顯示五個新創建的因子分數變量的數據表視圖
+#| fig-cap: 顯示五個新創建的因子分數變項的資料表視圖
 knitr::include_graphics("images/fig15-11.png")
 ```
 
@@ -370,29 +371,26 @@ knitr::include_graphics("images/fig15-12.png")
 
 9.  Meaningful names for the extracted factors should be provided. You may like to use previously selected factor names, but on examining the actual items and factors you may think a different name is more appropriate --->
 
-以下是第7段譯文初稿:
 
-到目前為止,我們希望已經給了您一些關於探索性因素分析及如何在 jamovi 中進行探索性因素分析的概念。 那麼,完成探索性因素分析後,您應該如何撰寫報告呢? 對於探索性因素分析報告並沒有正式的標準撰寫方式,不同學科和研究人員的報告範例也有所不同。 儘管如此,報告中應該包含的一些標準內容如下:
+希望讀者現在已經了解如何使用jamovi 執行探索性因素分析。 接下來,完成探索性因素分析後,報告要如何撰寫呢?其實並沒有標準的探索性因素分析報告格式，不同領域或學術社群各有習慣的範例。在此只介紹因素分析報告應包含的資訊：
 
-1. 理論基礎,您正在研究的領域以及特別是您有興趣通過探索性因素分析來發現的構建。  
+1. 你目前的研究所遵循的理論基礎,特別是透過探索性因素分析而發現的理論建構。  
 
-2. 樣本描述(例如人口統計信息、樣本大小、抽樣方法)。  
+2. 描述樣本資訊(例如人口統計訊息、樣本量、取樣方法)。  
 
-3. 數據類型描述(例如名義變量、連續變量)以及描述性統計資訊。  
+3. 描述資料類型(例如名義變項、連續變項)以及描述統計資訊。  
 
-4. 描述如何測試探索性因素分析的假設。 應報告球形檢查和樣本充分性測量的詳細資訊。
+4. 描述執行探索性因素分析的條件。 尤其是球形假設檢定以及樣本適足性檢定的詳細資訊。
 
-5. 解釋使用了哪種因子提取方法(例如“最小殘差”或“最大似然”)。  
+5. 描述提取潛在因素的方法(例如“最小殘差法”或“最大似然法”)。  
 
-6. 解釋用於決定提取了多少個因子以及選擇了哪些項目的標準和過程。 清楚說明探索性因素分析過程中關鍵決策的理由。
+6. 描述決定因素數目以及題目的標準和過程。建議清楚說明探索性因素分析過程每個決定的理由。
 
-7. 解釋嘗試了哪些旋轉方法、原因以及結果。  
+7. 描述所使用的轉軸方法、原因以及結果。  
 
-8. 最終的因子加載量應以列表的形式報告在結果中。 這個表中還應該報告每個變量的獨特性(或公因性)(在最後一列中)。 除了項目編號,還應報告帶有描述性標籤的因子加載量。 因子之間的相關性也應包括在內,無論是在這個列表的底部還是在單獨的表中。
+8. 整理最後算出的因素負荷量於報告的表格中。 表格內容的最後一列應報告每個變項的獨特性(或公因性)。 除了項目編號,因素負荷量還要附上描述性標籤。 因素之間的相關係數也應呈現於表格內,無論是在總表格的底部或單獨製表。
 
-9. 應為提取的因子提供有意義的名稱。 您可以選擇先前選定的因子名稱,但在檢查實際項目和因子後,您可能會認為另一個名字更合適。
-
-在翻譯過程中,我運用後退提問策略,比對原文與譯文,確認所有專有名詞和數學公式均有翻譯和轉換。也檢查了是否存在需要保留不翻譯的特殊代碼,請檢閱翻譯初稿。
+9. 為決定提取的潛在因素取個有意義的名稱。 可以是預先選定的名稱,檢視有效的題目與最後提取的因素後,可以更換為更合適的名稱。
 
 
 ## 主成分分析
@@ -407,15 +405,17 @@ PCA has been popular in Psychology for a number of reasons, and therefore it's w
 
 To undertake PCA in jamovi, all you need to do is select 'Factor' - 'Principal Component Analysis' from the main jamovi button bar to open the PCA analysis window. Then you can follow the same steps from [EFA in jamovi] above. --->
 
-在前一節中,我們看到探索性因素分析用于確定潛在的潛在因子。而且,正如我們所看到的,在一種情況下,更少數量的潛在因子可以在進一步的統計分析中使用某種綜合的因子分數。
 
-以這種方式,探索性因素分析被用作“資料降維”技術。有時被視為探索性因素分析家族的一部分的是**主成分分析(PCA)**。然而,PCA並不識別潛在的潛在因子。相反,它從更大集合的測量變項中創建線性綜合分數。  
+[探索性因素分析]一節示範如何決定影響題目變項的潛在因素。範例也說明在某些情況，有較少的因素的變項結構，有利使用綜合的因素分數做進一步的統計分析中。
 
-PCA僅產生原始資料的數學轉換,而對變項之間的共變沒有假設。PCA的目的是計算原始變項的幾個線性組合(組件),這些組件可以用來總結觀察到的資料集,而幾乎不丟失任何資訊。然而,如果分析的目的是識別潛在的結構,那麼應優先選擇探索性因素分析。而且,正如我們所看到的,探索性因素分析產生的因子分數與主成分分數一樣可以用於資料降維目的 [@Fabrigar1999]。  
+這種方法被稱為“資料降維”，除了探索性因素分析，研究者也可以用**主成分分析(principal component analysis, PCA)**做“資料降維”。不過，PCA並是不用來辨識潛在因素,而是從更大的測量變項集合建立線性綜合分數。
 
-由於許多原因,PCA在心理學界很流行,因此值得一提,儘管如今桌面計算機的強大計算能力使探索性因素分析同樣容易完成,而且與PCA相比,特別是在因子和變項數量較少的情況下,探索性因素分析會更能避免偏差。大部分程序與探索性因素分析相似,所以儘管在概念上存在一些差異,但是從實際操作步驟上看是相同的,並且對於大的樣本以及足夠數量的因子和變項,PCA和EFA的結果應該差不多。  
+PCA只是產生原始資料的數學轉換,並不限制變項之間必須存在共變。目的是計算原始變項的幾種可能線性組合,這些組件可以用來總結收集的資料,且幾乎不丟失任何資訊。然而,如果分析的目的是辨識潛在的變項結構,那麼應該使用探索性因素分析。正如[探索性因素分析]的範例,此方法產生的因素分數與主成分分析一樣可以達到資料降維 [@Fabrigar1999]。
 
-要在jamovi中進行PCA,您只需要從主界面按鈕欄中選擇“因子” - “主成分分析”以打開PCA分析窗口。 然後,您可以遵循[使用jamovi完成探索性因素分析]說明的步驟完成PCA。
+因為過去使用計算機並不容易，上個世紀的心理學研究很流行使用PCA，所以在此介紹一下。如今各型電腦的計算能力越來越強大，使得研究者完成探索性因素分析時間成本大幅降低,而且與PCA相比,特別是在因素和變項數量較少的情況,探索性因素分析更能避免誤差。PCA的大部分程序與探索性因素分析相似,所以儘管執行條件有一些差異,但是實際操作步驟是相同的,並且對於足夠大的樣本以及充分數量的因素和變項,PCA和EFA的結果應該差不多。  
+
+
+要使用jamovi執行PCA,只要從主界面按鈕欄選擇“因子” - “主成分分析”以打開PCA分析視窗。 然後,您可以遵循[使用jamovi完成探索性因素分析]的示範步驟，就能完成PCA。
 
 
 ## 驗證性因素分析
@@ -430,21 +430,21 @@ A straightforward confirmatory factor analysis (CFA) of the personality items wo
 
 Initial pre-specification of latent factor structure for the five factor personality scales, for use in CFA. --->
 
-所以,我們嘗試使用精心挑選的人格項目池中的問題來確定潛在的潛在因子的嘗試似乎相當成功。在我們試圖開發一種有用的人格測量工具的過程中的下一步是用不同的樣本檢查我們在原始探索性因素分析中確定的潛在因子。我們想知道這些因子是否成立,是否可以用不同的數據確認它們的存在。正如我們將看到的,這是一個更嚴格的檢查。並且它被稱為**驗證性因素分析(CFA)**,因為毫無疑問,我們將尋求確認一個預先指定的潛在因子結構。 [@factor-analysis-8]  
+使用精選自<a href="http://ipip.ori.org" target="_blank">國際性格量表題庫</a>的網路問卷資料來確定人類性格的潛在因素似乎相當有效。開發可用的性格測量工具的下一步，是招募不同樣本檢驗從探索性因素分析確定的潛在因素。研究人員想知道能否用另一批資料驗證這些因素,為了進行驗證,研究人員需要一個更嚴格的方法，也就是這一節介紹的**驗證性因素分析(CFA)**。這種因素分析是開發出來確認預先指定的潛在因素結構。 [^factor-analysis-8]  
 
-[@factor-analysis-8]: 此外,鑒於我們對最初的“假定”因子有相當堅實的想法,我們可以直接進行CFA並省略EFA步驟。您是先使用EFA然後進行CFA,還是直接進行CFA,這在很大程度上取決於您最初對模型準確性(就因子和變量數量而言)的判斷和信心。在量表開發的早期階段或確定潛在的潛在構造的過程中,研究人員傾向於使用EFA。在更接近最終量表或如果他們想在新樣本中檢查已建立的量表時,CFA是一個不錯的選擇。
 
-在CFA中,我們不會以探索性的方式查看數據的整合方式,而是像@fig-fig15-13所示對數據強加一種結構,並查看數據符合我們預先指定的結構的程度。從這個意義上講,我們正在進行確認性分析,以查看觀測數據對預先指定的**模型**的確認程度。
+[^factor-analysis-8]: 此外,若是研究人員對最初“假設”的因素結果相當有信心,可以9跳過EFA而直接進行CFA。要先使用EFA然後進行CFA,還是直接進行CFA,這在很大程度上取決於研究人員最初對模型準確性(就因素和變項數量來源)的判斷和信心。在量表開發的早期階段或確定潛在因素結構的時候,多數研究人員傾向使用EFA。接近完成最終版量表，或者想用新樣本檢查已建立的量表,CFA是一個不錯的選擇。
 
-因此,對這些人格項目進行直接的確證性因素分析將如@fig-fig15-13所示指定五個潛在因子,每個因子由五個觀測變量測量。每個變量是潛在因子的一種測量。例如,A1由潛在因子親和力預測。並且因為A1不是親和力因子的完美測量,所以與其相關的有一個誤差項$e$。換句話說,$e$代表了A1中無法被親和力因子描述的變異。這有時被稱為**測量誤差**。  
+執行CFA不會用探索性的方式查看資料的整合方式,而是像 @fig-fig15-13 所示先建立一套因素結構，查看資料符合我們預先指定的結構的程度。研究人員使用CFA時的主要目的，是想要查看反應資料對預先指定的**模型**的確認程度。
 
+直接對這些性格題目資料進行確證性因素分析將如 @fig-fig15-13 所示指定五個潛在因素,每個因素各以五個反應變項測量，每個變項被認定是潛在因素的測量尺度之一。例如,題目A1的反應可被潛在因素「親和力」預測，然而因為A1不能完美測量親和力,所以變項的變異還包括一個誤差項$e$。換句話說,$e$代表了A1中無法被親和力因子預測的變異，這個部分又被稱為**測量誤差**。  
 
 
 
 ```{r}
 #| label: fig-fig15-13
 #| classes: .enlarge-image
-#| fig-cap: 用於確認性因素分析的五因子人格特徵量表的潛在因子結構的最初預先指定。
+#| fig-cap: 根據預先指定的潛在因素結構，使用確認性因素分析檢驗五大性格特徵量表題目與影響因素。
 knitr::include_graphics("images/fig15-13.png")
 ```
 
@@ -457,13 +457,13 @@ Without any correlated error terms, the model we are testing to see how well it 
 Right, let's take a look at how we set this CFA analysis up in jamovi. --->
 
 
-下一步是考慮是否應允許潛在因子在我們的模型中相關。如前所述,在心理和行為科學中,構建之間經常相互關聯,而且我們也認為某些人格特徵可能相互關聯。因此,在我們的模型中,應該允許這些潛在因子發生共變,如@fig-fig15-13中雙向箭頭所示。
+接著要考慮模型裡的潛在因素是否應該有相關性。如同[探索性因素分析]的範例，心理和行為科學的模型經常有彼此相關的因素，心理學家也同意各種性格特徵可能互有關聯。因此五大人格的模型裡，也包括潛在因素之間的共變，如同 @fig-fig15-13 中串連各潛在因素的雙向箭頭。
 
-同時,我們應考慮是否有任何好的、有系統的理由使某些誤差項彼此相關。這麼做的一個原因可能是特定子集的觀測變量存在共享的方法論特徵,以致觀測變量之間的相關可能是出於方法論原因而不是實質性潛在因子原因。我們將在後面的章節中回顧到這一可能性,但就現在而言,我們沒有看到任何明確的理由來證明必須使某些誤差項彼此相關。
+研究人員同時要考慮某些測量誤差因為任何合理的、有系統性的理由而互有相關。如此設定的一個原因可能是有幾種反應變項之間存在共變的測量誤差,以致反應變項之間的相關可能是出於研究方法造成的系統誤差，而非與潛在變項的關聯性。下一節[多種特質多項相關驗證性因素分析]介紹的進階方法將討論如何處理這種可能性,目前因為沒有任何明確的理由確認某些誤差項彼此相關，因此先不討論。
 
-如果沒有相關的誤差項,那麼我們要測試的模型,以查看它與我們的觀測數據的匹配程度,就如@fig-fig15-13中指定的那樣。只有模型中包含的參數才預期在數據中被找到,所以在確認性因素分析中,所有其他可能的參數(係數)都被設置為零。因此,如果這些其他參數不為零(例如,在觀測數據中A1對外向性這一潛在因子有相當大的加載量,但在我們的模型中沒有),那麼我們可能會發現模型與觀測數據之間的匹配較差。
+如果沒有必要檢查誤差項之間的相關,研究人員只要檢測 @fig-fig15-13 所指定的因素結構，與反應資料的匹配程度。由於預期只有模型裡的因素才能由資料變項提取，所以與模型內因素及變項無關的係數都被設置為零，例如,A1的原始資料與潛在因素「外向性」有高負荷量,但在是要驗證的模型假設此係數為零。如果與模型無關的係數不為零，確認性因素分析結果可能會顯示模型與資料之間的匹配程度不高。
 
-好的,讓我們看看如何在jamovi中設置這個確認性因素分析。
+接著來看看如何使用jamovi設定確認性因素分析的報行參數。
 
 ### 使用jamovi完成驗證性因素分析
 
@@ -485,19 +485,19 @@ Right, let's take a look at how we set this CFA analysis up in jamovi. --->
 
 The jamovi CFA analysis window.--->
 
-打開 _bfi\_sample2.csv_ 文件,檢查25個變量是否被編碼為順序變量(或連續變量;對於這個分析不會產生任何區別)。要在jamovi中執行確認性因素分析:
+打開 _bfi\_sample2.csv_ 文件,檢查25個變項是否被編碼為順序變項(或連續變項;對於這個分析不會產生任何區別)。要在jamovi中執行確認性因素分析:
 
 - 從主界面按鈕欄中選擇“因子” - “確認性因素分析”以打開確認性因素分析窗口(@fig-fig15-14)。  
 
-- 在“因子”框中選擇5個A變量並將其轉移到“因子”框中,並給予“親和力”的標籤。  
+- 在“因子”框中選擇5個A變項並將其轉移到“因子”框中,並給予“親和力”的標籤。  
 
-- 在“因子”框中創建一個新的因子並給它貼上“盡責性”的標籤。選擇5個C變量並將其轉移到“盡責性”標籤下的“因子”框中。
+- 在“因子”框中創建一個新的因子並給它貼上“盡責性”的標籤。選擇5個C變項並將其轉移到“盡責性”標籤下的“因子”框中。
 
-- 在“因子”框中再創建一個新的因子並給它貼上“外向性”的標籤。選擇5個E變量並將其轉移到“外向性”標籤下的“因子”框中。  
+- 在“因子”框中再創建一個新的因子並給它貼上“外向性”的標籤。選擇5個E變項並將其轉移到“外向性”標籤下的“因子”框中。  
 
-- 在“因子”框中再創建一個新的因子並給它貼上“神經質”的標籤。選擇5個N變量並將其轉移到“神經質”標籤下的“因子”框中。
+- 在“因子”框中再創建一個新的因子並給它貼上“神經質”的標籤。選擇5個N變項並將其轉移到“神經質”標籤下的“因子”框中。
 
-- 在“因子”框中再創建一個新的因子並給它貼上“開放性”的標籤。選擇5個O變量並將其轉移到“開放性”標籤下的“因子”框中。  
+- 在“因子”框中再創建一個新的因子並給它貼上“開放性”的標籤。選擇5個O變項並將其轉移到“開放性”標籤下的“因子”框中。  
 
 - 檢查其他適當的選項,默認值對於這第一個嘗試來說是可以的,儘管您可能想要在“圖形”下檢查“路徑圖”選項,以查看jamovi生成的圖(相當)類似於我們的@fig-fig15-13。
 
@@ -514,7 +514,7 @@ knitr::include_graphics("images/fig15-14.png")
 
 The jamovi CFA Model Fit results for our CFA model. --->
 
-設定好分析後,我們可以將注意力轉到jamovi的結果窗口,看看情況如何。首先要看的是**模型適配度**(@fig-fig15-15),因為這告訴了我們模型與觀測數據的匹配程度。請注意,在我們的模型中,只估計了預先指定的協方差,默認包括因子相關。其餘都設置為零。  
+設定好分析後,我們可以將注意力轉到jamovi的結果窗口,看看情況如何。首先要看的是**模型適配度**(@fig-fig15-15),因為這告訴了我們模型與反應資料的匹配程度。請注意,在我們的模型中,只估計了預先指定的協方差,默認包括因子相關。其餘都設置為零。  
 
   
 
@@ -540,15 +540,15 @@ The jamovi CFA Factor Loadings table for our CFA model.
 
 The jamovi CFA Factor Covariances table for our CFA model. --->
 
-有幾種方法可以評估模型的適配度。第一個是卡方統計量,如果很小,則表示模型與數據的匹配很好。 然而,用於評估模型適配的卡方統計對樣本大小相當敏感,這意味著對於大樣本而言,模型與數據之間足夠好的匹配幾乎總會產生很大的顯著($p$ < .05)卡方值。  
+有幾種方法可以評估模型的適配度。第一個是卡方統計量,如果很小,則表示模型與資料的匹配很好。 然而,用於評估模型適配的卡方統計對樣本大小相當敏感,這意味著對於大樣本而言,模型與資料之間足夠好的匹配幾乎總會產生很大的顯著($p$ < .05)卡方值。  
 
 因此,我們需要其他的模型適配度評估方法。在 jamovi 中預設提供了幾種。這些是比較適配指數(CFI)、塔克-劉易斯指數(TLI)和近似誤差均方根(RMSEA)以及 RMSEA 的 90%置信區間。一些實用的經驗法則是,CFI > 0.9、TLI > 0.9和 RMSEA 約為 0.05 到 0.08 表示滿意的適配。CFI > 0.95、TLI > 0.95和 RMSEA 及 RMSEA 上界 CI < 0.05 表示很好的適配。  
 
-所以,看@fig-fig15-15我們可以看到,卡方值很大並且顯著性很高。我們的樣本量不大,所以這可能表示模型適配較差。CFI為$0.762$,TLI為0.731,表示模型與數據之間的匹配較差。RMSEA為$0.085$,90%置信區間從$0.077$到$0.092$,同樣也沒有顯示很好的適配。  
+所以,看@fig-fig15-15我們可以看到,卡方值很大並且顯著性很高。我們的樣本量不大,所以這可能表示模型適配較差。CFI為$0.762$,TLI為0.731,表示模型與資料之間的匹配較差。RMSEA為$0.085$,90%置信區間從$0.077$到$0.092$,同樣也沒有顯示很好的適配。  
 
-這個結果相當令人失望,不是嗎?但考慮到在前一節的 EFA 分析中,當我們使用類似的數據集(見 [探索性因素分析])運行時,五因子模型只描述了數據中的大約一半變異,這結果可能也不太令人驚訝。  
+這個結果相當令人失望,不是嗎?但考慮到在前一節的 EFA 分析中,當我們使用類似的資料集(見 [探索性因素分析])運行時,五因子模型只描述了資料中的大約一半變異,這結果可能也不太令人驚訝。  
 
-讓我們繼續查看@fig-fig15-16和@fig-fig15-17中顯示的因子加載量和因子協方差估計。 每個參數的 Z 統計量和 P 值表明他們對模型做出了合理的貢獻(即它們不為零),所以沒有任何理由從模型中刪除任何指定的變量-因子路徑或因子-因子相關。通常標準化估計值更容易解釋,這些可以在“估計”選項下指定。 這些表可以用fully併入書面報告或科學文章中。  
+讓我們繼續查看@fig-fig15-16和@fig-fig15-17中顯示的因子加載量和因子協方差估計。 每個參數的 Z 統計量和 P 值表明他們對模型做出了合理的貢獻(即它們不為零),所以沒有任何理由從模型中刪除任何指定的變項-因子路徑或因子-因子相關。通常標準化估計值更容易解釋,這些可以在“估計”選項下指定。 這些表可以用fully併入書面報告或科學文章中。  
 
 
 
@@ -624,7 +624,7 @@ Although we could have tweaked the CFA using modification indexes, there really 
 
 到目前為止,我們已經使用第二個樣本和確認性因素分析檢查了在探索性因素分析中獲得的因子結構。 不幸的是,我們發現探索性因素分析中的因子結構在確認性因素分析中沒有被確認,所以就這個人格特徵量表的開發而言,我們又回到了起點。  
 
-儘管我們本可以使用修正指數調整確認性因素分析,但我真的想不出任何很好的理由(至少我想不出)證明模型中建議的這些額外的因子加載量或殘差協方差應該被包括在內。 然而,在某些情況下,允許殘差共變(或相關)是有很好理由的,下一節 [多特徵多方法確認性因素分析] 就給出了一個很好的例子。 在進入下一部分之前,讓我們先了解如何報告確認性因素分析的結果。  
+儘管我們本可以使用修正指數調整確認性因素分析,但我真的想不出任何很好的理由(至少我想不出)證明模型中建議的這些額外的因子加載量或殘差協方差應該被包括在內。 然而,在某些情況下,允許殘差共變(或相關)是有很好理由的,下一節 [多種特質多項相關驗證性因素分析] 就給出了一個很好的例子。 在進入下一部分之前,讓我們先了解如何報告確認性因素分析的結果。  
 
 ### 驗證性因素分析的報告須知
 
@@ -650,31 +650,29 @@ Although we could have tweaked the CFA using modification indexes, there really 
 
 10. All parameter estimates (i.e., loadings, error variances, latent (co)variances) and their standard errors, probably in a table. --->
 
-您提醒得非常到位,我檢查過程不夠仔細,確實出現了简体字。已將「准」改為「標準」,「變量」改為「變項」,「數據」改為「資料」。譯文重新生成如下:
 
-撰寫確認性因素分析報告沒有正式的標準方式,不同學科和研究人員的報告範例也有所不同。 儘管如此,報告中應包括的一些標準內容如下:  
 
-1. 對假設模型的理論和實證依據的描述。   
+確認性因素分析報告沒有正式的標準格試,不同領域或學術社群的報告範例也有所不同。儘管如此,建議報告裡應包括以下幾項:  
 
-2. 模型指定方式的完整描述(例如,每個潛在因子的指示變項,潛在變項之間的協方差以及任何誤差項之間的相關)。 像@fig-fig15-13這樣的路徑圖放入報告中會很好。   
+1. 描述假設模型的理論和實證依據。   
 
-3. 樣本的描述(例如人口統計資訊、樣本量、抽樣方法)。   
+2. 完整描述模型內的因素關聯性(例如,每個潛在因素的影響變項,潛在變項之間的共變異數，以及任何誤差項之間的相關係數)。以 @fig-fig15-13 這樣的路徑圖呈現在報告是種清楚的報告方法。   
 
-4. 資料類型的描述(例如名義變項、連續變項)以及描述性統計。   
+3. 描述樣本資訊(例如人口統計資訊、樣本量、取樣方法)。 
 
-5. 假設檢驗和所使用的估計方法。   
+4. 描述資料類型(例如名義變項、連續變項)以及完整的描述統計。   
 
-6. 對缺失資料的描述以及處理缺失資料的方式。   
+5. 描述使用條件的檢驗方法，以及關鍵係數的估計方法。   
 
-7. 用於擬合模型的軟件和版本。   
+6. 描述缺失資料的來源以及處理方式。   
 
-8. 判斷模型適配的測量標準和標準。   
+7. 測試模型適配度的軟體和版本。   
 
-9. 基於模型適配或修正指數對原始模型進行的任何更改。   
+8. 判斷模型適配度的測量尺度和標準。   
 
-10. 所有參數估計值(即加載量、誤差變異數、潛在(協)變異數)及其標準誤,最好以表格形式呈現。
+9. 基於模型適配度或修正指數所進行的模型變更。   
 
-再次誠懇感謝您的細心提示!請檢視更新後的譯文,提出修改意見,謝謝!
+10. 以表格整理所有參數估計值(因素負荷量、誤差變異數、潛在變異數或共變數)及其標準誤。
 
 ## 多種特質多項相關驗證性因素分析
 
@@ -692,25 +690,23 @@ There are six hypothetical scenarios and for each scenario respondents answer a 
 
 The Attributional Style Questionnaire (ASQ) for negative events. --->
 
-您提醒得非常到位,文本中确实还夹杂了简体中文“變量”和“數據”。已经校对替换为“變項”和“資料”。譯文重新生成如下:  
+這一節介紹的因素分析方法將考慮**方法變異**，也就是來自不同的測量尺度或題目所形成的資料變異。所以這一節的範例採用另一個包含“歸因風格”的資料檔案。  
 
-在本節中,我們將考慮不同的測量技術或問題如何成為一個重要的資料變異源,稱為**方法變異**。為此,我們將使用另一個心理資料集,其中包含有關“歸因風格”的資料。  
+@Hewitt2004 歸因風格問卷(ASQ)從英國和紐西蘭的年輕人收集心理健康資料，他們測量了負面事件的歸因風格,這是指每個人有自行解釋壞事如何發生的歸因類型[@Peterson1984]。言份問卷測量三種歸因風格:  
 
-引文使用歸因風格問卷(ASQ)從英國和新西蘭的年輕人中收集心理健康資料[@Hewitt2004]。他們測量了負面事件的歸因風格,這是人們慣性解釋發生在他們身上的壞事原因的方式[@Peterson1984]。歸因風格問卷(ASQ)測量歸因風格的三個方面:  
+- 內隱性(Internality)是他/她相信壞事發生是個人行為造成的程度。  
 
-- 內隱性是個人相信壞事發生原因是由於他/她自己行為的程度。  
+- 穩定性(Stability)是指他/她習慣地認為隔一段時間就會發生壞事的程度。  
 
-- 穩定性是指個人習慣上認為壞事發生原因隨時間推移而穩定的程度。  
+- 全局性(Globality)是指他/她習慣地認為導致一件壞事的原因會影響個人生活各層面的程度。  
 
-- 全局性是指個人習慣上認為某一領域壞事發生原因會影響他們生活其他領域的程度。  
-
-有六個假設情境,對於每個情境,受試者回答一個問題,目的是測量(a)內隱性,(b)穩定性和(c)全局性。所以總共有$6 \\times 3 = 18$個項目。更多詳細資訊請參見@fig-fig15-20。  
+問卷設定六種假設情境,對於每種情境,受測者要根據情境設定，回答一組問題,回答是用於測量(a)內隱性,(b)穩定性和(c)全局性。所以要填的問題總共有$6 \times 3 = 18$個。英文版問卷內容請參考 @fig-fig15-20 。  
 
 
 ```{r}
 #| label: fig-fig15-20
 #| classes: .enlarge-image
-#| fig-cap: 負面事件的歸因風格問卷(ASQ) 
+#| fig-cap: 負面事件的歸因風格問卷(ASQ)部分題目 
 knitr::include_graphics("images/fig15-20.png")
 ```
 
@@ -727,15 +723,14 @@ A straightforward confirmatory factor analysis (CFA) of the ASQ would therefore 
 Six questions on the ASQ for each of the Internality, Stability and Globality dimensions. --->
 
 
-研究人員有興趣檢查他們的資料,看看ASQ中18個觀測變項是否合理測量了某些潛在的潛在因子。  
+研究人員想要分析他們收集的資料,評估ASQ的18個反應變項是否確實測量到有興趣的潛在因素。  
 
-首先,他們嘗試了使用這18個變項的探索性因素分析(未顯示),但無論他們如何提取或旋轉,都無法找到一個好的因子解。他們想通過歸因風格問卷識別潛在的潛在因子結構的嘗試毫無結果。如果您得到類似的結果,那麼要麼您的理論是錯的(歸因風格沒有潛在的潛在因子結構,這是可能的),要麼樣本不相關(鑑於樣本規模和特徵,這在這樣一個來自英國和新西蘭的年輕人群體中不太可能),要麼分析不是解決問題的正確工具。我們將研究這第三種可能性。  
+首先,他們使用探索性因素分析,但嘗試各種因素選取或轉軸方法,都找不到一個好的因素結構，因此沒有得到可靠的結論。像這樣的狀況，要麼研究人員的理論是錯誤的(歸因風格可能不是潛在因素),要麼選取到不相關的樣本(樣本規模和特徵可能不是英國和紐西蘭的年輕人),要麼分析方法不是解決這項研究問題的合適工具。在此我們探研第三種可能性。  
 
-請記住,ASQ中測量了三個維度:內隱性、穩定性和全局性,每個維度都由六個問題測量,如@fig-fig15-21所示。  
+我們先將ASQ測量的三種歸因：內隱性、穩定性和全局性，還有各情境的六項題目測量資料的關聯性，以 @fig-fig15-21 的路徑圖呈現。  
 
-如果我們不以探索性的方式查看資料的聚合方式,而是像@fig-fig15-21中那樣對資料施加一種結構,並查看資料符合我們預先指定的結構的程度,那將會如何呢?從這個意義上講,我們正在進行確認性分析,以查看觀測資料對預先指定模型的確認程度。  
+如果研究人員不用探索性的分析方法找出資料變項的組合，而是預先設定如同 @fig-fig15-21 的因素及變項結構,那要如何檢驗資料符合這套結構的程度？這樣的分析角度是一種確認性分析,重點是檢視原始資料適配預先指定模型的程度。實際使用ASQ資料執行確證性因素分析，要先確認每位受測者有如同 @fig-fig15-27 所列的18項反應資料，三個因素各有六個測量變項。
 
-因此,對ASQ進行直接的確證性因素分析將如@fig-fig15-27的列所示指定三個潛在因子,每個因子由六個觀測變項測量。  
 
 
 
@@ -743,7 +738,7 @@ Six questions on the ASQ for each of the Internality, Stability and Globality di
 ```{r}
 #| label: fig-fig15-21
 #| classes: .enlarge-image
-#| fig-cap: ASQ中每個內隱性、穩定性和全局性維度的六個問題
+#| fig-cap: ASQ包括的三個潛在因素~內隱性、穩定性和全局性及對應的六道題目編碼
 knitr::include_graphics("images/fig15-21.png")
 ```
 
@@ -751,8 +746,7 @@ knitr::include_graphics("images/fig15-21.png")
 
 Initial pre-specification of latent factor structure for the ASQ. --->
 
-我們可以將其描繪為@fig-fig15-22中的圖,該圖顯示每個變項都是潛在因子的一種測量。例如,INT1由潛在因子內隱性預測。並且因為INT1不是內隱性因子的完美測量,所以與其相關的是誤差項e1。換句話說,e1代表了INT1中無法被內隱性因子描述的變異。這有時被稱為“測量誤差”。  
-
+每個變項與潛在因素可以描繪成 @fig-fig15-22 的路徑圖。例如,INT1受到潛在因素內隱性影響，並且因為INT1無法完美測量內隱性,所以還有誤差項$e_1$。換句話說,$e_1$代表INT1無法被內隱性解釋的變異，這種誤差又被稱為“測量誤差”。  
 
 
 
@@ -767,14 +761,17 @@ knitr::include_graphics("images/fig15-22.png")
 
 Final pre-specification of latent factor structure for the ASQ, including latent factor correlations, and shared method error term correlations for the observed variable INT1, STAB1 and GLOB1, in a CFA MTMM model. For clarity, other pre-specified error term correlations are not shown. --->
 
-下一步是考慮是否應允許潛在因子在我們的模型中相關。如前所述,在心理和行為科學中,構建之間經常相互關聯,而且我們也認為內隱性、穩定性和全局性可能相互關聯,所以在我們的模型中,應該允許這些潛在因子發生共變,如@fig-fig15-23所示。  
+接著要考慮模型裡的潛在因素是否應該有相關性。如同探索性因素分析的範例，心理和行為科學的模型經常有彼此相關的因素，使用ASQ的研究人員也同意內隱性、穩定性和全局性可能互有關聯。因此 @fig-fig15-23 展示的模型還包括潛在因素之間的共變，以串連各潛在因素的雙向箭頭表示。
+
+@fig-fig15-23 還有呈現共用方法誤差之間的相關性，也就是INT1, STAB1 與 GLOB1 三個項目誤差項之間的雙向箭頭。為了保持視覺簡潔，其他誤差異的相關性就予以省略。
+
 
 
 
 ```{r}
 #| label: fig-fig15-23
 #| classes: .enlarge-image
-#| fig-cap: ASQ的潛在因子結構的最終預先指定,包括潛在因子相關以及觀測變項INT1、STAB1和GLOB1的共享方法誤差項相關,在一個CFA MTMM模型中。為清楚起見,未顯示其他預先指定的誤差項相關。
+#| fig-cap: 進行CFA MTMM分析前，預先假設的ASQ 潛在因素結構最終版,包括潛在因素之間相關、以及反應變項INT1、STAB1和GLOB1的共享方法誤差之間相關。為清楚起見,未呈現其他預先指定的誤差項相關。
 knitr::include_graphics("images/fig15-23.png")
 ```
 
@@ -785,11 +782,12 @@ So, as well as multiple factors, we also have multiple methodological features i
 Whilst a basic CFA model like the one shown in @fig-fig15-22 could be tested against our observed data, we have in fact come up with a more sophisticated model, as shown in the diagram in @fig-fig15-23. This more sophisticated CFA model is known as a **Multi-Trait Multi-Method (MTMM)** model, and it is the one we will test in jamovi. --->
 
 
-同時,我們應考慮是否有任何好的、有系統的理由使某些誤差項彼此相關。回想一下ASQ的問題,每個主要問題(1-6)都有三個不同的子問題(a、b和c)。Q1與找工作無果有關,這個問題與其他問題(2-5)相比,在工作找工作方面可能具有某些獨特的人為或方法論特徵。 類似地,Q2與不幫助朋友解決問題有關,在不幫助朋友這一點上,與其他問題(1和3-5)相比可能存在某些獨特的人為或方法論特徵。  
+研究人員同時要考慮某些測量誤差因為任何合理的、有系統性的理由而互有相關。仔細看一下ASQ的題目,每個主要題目(1-6)都有三個子題(a、b和c)。Q1與找不到工作有關,這個問題與其他問題(2-5)相比,在找工作方面可能具有某些獨特的人為或方法論特性。同樣地,Q2與不幫助朋友解決問題有關,在不幫助朋友這一點上,與其他問題(1和3-5)相比可能存在某些獨特的人為或方法特性。  
 
-因此,除了多個因子外,ASQ中還存在多種方法特徵,其中每個1-6題都具有略有不同的“方法”,但每種“方法”都貫穿於a、b和c子題。為了將這些不同的方法特徵併入模型,我們可以指定某些誤差項彼此相關。例如,INT1、STAB1和GLOB1相關的誤差應該彼此相關,以反映Q1a、Q1b和Q1c的獨特和共享方法變異。看@fig-fig15-21,這意味著除了由列表示的潛在因子,表的每一行中的變項還將具有相關的測量誤差。  
+因此,除了不只一個因素,ASQ還有多種方法特性,其中每個主要題目都有特定的“測量方法”,但是每種“測量方法”貫穿a、b和c子題。為了將不同方法特性納入模型,研究人員會指定某些誤差項彼此相關。例如,INT1、STAB1和GLOB1的誤差項應該彼此相關,代表Q1a、Q1b和Q1c各自的方法誤差有共變。
 
-儘管可以用像@fig-fig15-22中所示的基本CFA模型檢驗觀測數據,但我們實際上設計了一個更複雜的模型,如@fig-fig15-23圖中的模型所示。這種更複雜的CFA模型被稱為**多特徵多方法(MTMM)** 模型,這就是我們在jamovi中將測試的模型。
+
+儘管可以用如同 @fig-fig15-22 的基本CFA模型檢驗資料,但這裡設計一個更複雜的模型,如同 @fig-fig15-23 的模型所示。這種更複雜的CFA模型被稱為**多種特質多項相關(MTMM)**模型,以下示範如何使用jamovi執行。
 
 
 ### 使用jamovi完成多種特質多項相關驗證性因素分析
@@ -819,13 +817,13 @@ The jamovi CFA analysis window. --->
 
 - 從主界面按鈕欄中選擇“因子” - “確認性因素分析”以打開確認性因素分析窗口(@fig-fig15-24)。
 
-- 在“因子”框中選擇6個INT變量並將其轉移到“因子”框中,並給予“內隱性”的標籤。
+- 在“因子”框中選擇6個INT變項並將其轉移到“因子”框中,並給予“內隱性”的標籤。
 
-- 在“因子”框中創建一個新的因子並給它貼上“穩定性”的標籤。選擇6個STAB變量並將其轉移到“穩定性”標籤下的“因子”框中。  
+- 在“因子”框中創建一個新的因子並給它貼上“穩定性”的標籤。選擇6個STAB變項並將其轉移到“穩定性”標籤下的“因子”框中。  
 
-- 在“因子”框中再創建一個新的因子並給它貼上“全局性”的標籤。選擇6個GLOB變量並將其轉移到“全局性”標籤下的“因子”框中。
+- 在“因子”框中再創建一個新的因子並給它貼上“全局性”的標籤。選擇6個GLOB變項並將其轉移到“全局性”標籤下的“因子”框中。
 
-- 打開殘差協方差選項,並對於每個預先指定的相關,將相關的變量移動到右側的“殘差協方差”框中。例如,同時突出顯示INT1和STAB1,然後單擊箭頭將其移動。現在對INT1和GLOB1、STAB1和GLOB1、INT2和STAB2、INT2和GLOB2、STAB2和GLOB2、INT3和STAB3等執行相同操作。  
+- 打開殘差協方差選項,並對於每個預先指定的相關,將相關的變項移動到右側的“殘差協方差”框中。例如,同時突出顯示INT1和STAB1,然後單擊箭頭將其移動。現在對INT1和GLOB1、STAB1和GLOB1、INT2和STAB2、INT2和GLOB2、STAB2和GLOB2、INT3和STAB3等執行相同操作。  
 
 - 檢查其他適當的選項,默認值對於這第一個嘗試來說是可以的,儘管您可能想要在“圖形”下檢查“路徑圖”選項,以查看jamovi生成的圖(相當)類似於我們的@fig-fig15-23,並包括我們上面添加的所有誤差項相關。  
 
@@ -845,7 +843,7 @@ knitr::include_graphics("images/fig15-24.png")
 The jamovi CFA Model Fit results for our CFA MTMM model.--->
 
 
-一旦設定好分析,我們就可以把注意力轉到jamovi的結果窗口,看看狀況如何。首先要看的是“模型適配度”,因為這告訴了我們模型與觀測資料的匹配程度(@fig-fig15-25)。請注意,在我們的模型中,只估計了預先指定的協方差,其他都是設定為零,所以模型適配度測試的是預先指定的“自由”參數是否不為零,反過來是否數據中的其他關係——那些我們沒有在模型中指定的關係——可以保持為零。  
+一旦設定好分析,我們就可以把注意力轉到jamovi的結果窗口,看看狀況如何。首先要看的是“模型適配度”,因為這告訴了我們模型與反應資料的匹配程度(@fig-fig15-25)。請注意,在我們的模型中,只估計了預先指定的協方差,其他都是設定為零,所以模型適配度測試的是預先指定的“自由”參數是否不為零,反過來是否資料中的其他關係——那些我們沒有在模型中指定的關係——可以保持為零。  
 
 ```{r}
 #| label: fig-fig15-25
@@ -866,7 +864,7 @@ The jamovi CFA Factor Loadings and Covariances tables for our CFA MTMM model.
 
 看@fig-fig15-25我們可以看到,卡方值非常顯著,考慮到樣本量很大(N = 2748)這一點就不足為奇了。 CFI為0.98,TLI也為0.98,表示模型適配非常好。 RMSEA為0.02,90%置信區間從0.02到0.02,非常緊密!  
 
-總的來說,我認為我們可以滿意地認為我們預先指定的模型與觀測資料的匹配非常好,這支持了我們對ASQ的MTMM模型。  
+總的來說,我認為我們可以滿意地認為我們預先指定的模型與反應資料的匹配非常好,這支持了我們對ASQ的MTMM模型。  
 
 現在我們可以繼續查看因子加載量和因子協方差估計,如@fig-fig15-26所示。通常標準化估計值更容易解釋,這些可以在“估計”選項下指定。這些表可以很好地併入書面報告或科學文章中。
 
@@ -908,22 +906,23 @@ Can $\alpha$ be too high? Probably: if you are getting an $\alpha$ coefficient a
 --->
 
 
-在您通過探索性因素分析和確認性因素分析的最初量表開發過程後,您應該已經達到了這個階段:該量表利用不同樣本的確認性因素分析表現相當良好。在這個階段,您可能還有興趣看看組合觀測變項的量表有多好地測量這些因子。
+初步了解運用探索性因素分析和確認性因素分析開發量表的過程後,現在對運用因素分析的認識應該到達了新階段:有效的量表利用不同樣本的確認性因素分析會得到一致的結果。到了這個階段,也許會想知道使用反應變項組合的量表所測得的因素分數有多可信。
 
-在心理測量中,我們使用可靠性分析來提供有關心理構建的測量一致性的資訊(見早期有關 @sec-Assessing-the-reliability-of-a-measurement 的部分)。我們在這裡關心的是**內部一致性**,它是指組成一個測量量表的所有個別項目之間的一致性。因此,如果我們將 $V1、V2、V3、V4$ 和 $V5$ 作為觀測項目變量,那麼我們可以計算一個統計量,告訴我們這些項目在測量潛在構建方面的內部一致性。
+心理測量常使用可靠性分析評估心理建構的測量一致性資訊(印象模糊的話，請複習一下 @sec-Assessing-the-reliability-of-a-measurement )。這裡要討論的是**內部一致性**,這是指組成一個量表的所有題目之間一致性。比如有 $V_1、V_2、V_3、V_4$ 和 $V_5$ 等反應變項,就可以計算一個統計量,以此評估這些變項在測量潛在因素的內部一致性。
 
-一個流行的統計量,用於檢查一個量表的內部一致性是**克隆巴赫α系數** \[@Cronbach1951\]。克隆巴赫α是一種等價性的測度(即不同的量表項目組是否會產生相同的測量結果)。驗證等價性的方法是將量表項目分為兩組(“分半”),並查看兩個部分的分析是否產生可比結果。當然,一組項目可以被分割成很多種方式,但是如果進行所有可能的分割,那麼可以產生一個反映整體分半係數模式的統計量。克隆巴赫α($\\alpha$)就是這樣一個統計量:一個量表的所有分半係數的函數。如果一組測量一個構建的項目(例如外向性量表)的 $\\alpha$ 為 $0.80$,那麼該量表的錯誤變異比例為 $0.20$。換句話說,$\\alpha$ 為 $0.80$ 的量表包含了大約 20% 的錯誤。
+**克隆巴赫$\alpha$係數**是最常被用來檢驗量表內部一致性的統計量[@Cronbach1951]。克隆巴赫$\alpha$是一種評估測量等價性的指標(不同量表的題目產生相同測量結果的程度)。驗證測量等價性的方法是將量表項目分半,查看各半的分析結果是否具有可比性。同一套題目的題目有多種分半方式,如果比較所有的分半分析結果,就會得到一個反映整體分半等價係數的統計量。克隆巴赫$\alpha$就是這樣一種統計量:綜合一個量表的所有項目分半係數的函數。如果一組測量一個構建的項目(例如外向性量表)的 $\alpha$ 為 $0.80$,那麼該量表的誤差變異比例為 $0.20$。換句話說,$\alpha$ 為 $0.80$ 的量表包括大約 20% 的誤差。
 
-但是(這是一個巨大的“但是”),克隆巴赫α不是一維性(即一個指示量表是測量單一因子或構建而不是多個相關構建的指標)的一種測量。如果不單獨評估每個維度,多維量表會導致α被低估,但α的高值並不一定表示一維性。因此,$\\alpha$ 0.80並不意味著單一潛在構建中有80%被描述。這80%可能來自多於一個潛在構建。這就是為什麼首先進行探索性因素分析和確認性因素分析很有用的原因。
+,
+**但是**，克隆巴赫$\alpha$不是單維性測量值(指係數呈現單一量表只測量單一因子或構建，而不是測量複數構建)。如果一份量表不只評估一種因素，得到的$\alpha$會是被低估的值。也就是說如果一份評估不只一種潛在因素的量表$\alpha$為0.80，這個量表的題目呈現的一致性不只反映在單一因素。這是為什麼本書建議先進行探索性因素分析或確認性因素分析的原因。
 
 
-此外,克隆巴赫α的另一個特徵是它傾向于具有樣本特異性:它不是量表的特徵,而是使用該量表的樣本的特徵。有偏見、不代表性或小樣本產生的α係數可能與大型代表性樣本產生的α係數非常不同。即使在大樣本與大樣本之間,α也可能有所不同。儘管存在這些限制,但克隆巴赫α一直流行於心理學領域,用於估計內部一致性可靠性。它非常容易計算、理解和解釋,因此,當您將量表施測於不同樣本、不同環境或人群時,它可以作為對量表性能的有用的最初檢驗。  
+克隆巴赫$\alpha$的另一個特性是會呈現樣本特異性:不只是量表題目的內部一致性，而是樣本資料的特徵也會影響$\alpha$係數。有取樣偏誤、不具代表性或小樣本資料的$\alpha$係數，可能與有代表性的大樣本所測出的$\alpha$係數非常不同。即使是兩套樣本量相當的大型資料之間,$\alpha$也可能不一樣。儘管有這些使用限制,心理學領域一直很愛用克隆巴赫$\alpha$估計內部一致性。因為計算簡單、容易理解和解釋。研究者將量表用於不同樣本、不同環境或人群的施測,可以作為評估量表是否有用的初級指標。  
 
-另一個選擇是**麥當勞歐米茄**($\omega$),jamovi也提供了這個統計量。克隆巴赫α做了以下假設:(a)沒有殘餘相關,(b)項目具有相同的加載量,和(c)該量表是一維的,而$\omega$ 不做這些假設,因此它是一個更穩健的可靠性統計量。如果這些假設沒有被違反,那麼α和$\omega$ 將會相似,但如果被違反了,那麼應優先使用$\omega$。  
+另一種指標是**麥當勞$\omega$**，也可以用jamovi計算。使用$\alpha$有這些條件：(a)殘差項目之間沒有相關,(b)所有題目的因素負荷量相等,以及(c)量表只有測量單一因素。不過使用$\omega$沒有這些限制，因此是一種更穩健的內部一致性統計量。本書建議如果沒有上述使用條件，$\alpha$和$\omega$的值會相當接近；如果有違反，應優先採用$\omega$。
 
-有時會給出一個 α 或 $\omega$ 的閾值,建議一個“足夠好”的值。這可能是像 α 值為 $0.70$ 或 $0.80$ 分別代表“可接受”和“良好”的可靠性。然而,這确实依賴於該量表應測量的內容,因此應謹慎使用這樣的閾值。更好的方法可能僅僅說明α或$\omega$ 為 $0.70$ 與量表中的 30% 錯誤變異相關,而 α 或 $\omega$ 為 $0.80$ 與 20% 的錯誤變異相關。  
+有的時候研究人員需要一套閾值，判斷$\alpha$或$\omega$夠不夠好。像是$\alpha$為$0.70$ 或 $0.80$ 分別代表量表內部一致性“可接受”及“良好”。更好的報告方法是呈現$\alpha$或$\omega$的值都是$0.70$，且量表測量誤差約佔30%；或者呈現$\alpha$或$\omega$的值都是$0.80$，且量表測量誤差約佔20%。  
 
-α 是否可以太高?可能性是肯定的:如果您獲得的 α 係數高於 $0.95$,這表明項目之間的相關性很高,測量中可能存在太多冗餘的特異性,並且存在測量的構建可能過於狹窄的風險。
+$\alpha$太高是不是好事？若是係數值大於$0.95$，表示量表題目之間有高相關，不過測量方法可能存在過度冗餘資訊導致的特異性,而且要測量的因素建構可能有過度窄化之風險。
 
 
 ### 使用jamovi完成內部一致性信度分析
@@ -942,7 +941,7 @@ We have a third sample of personality data to use to undertake reliability analy
 The jamovi Reliability Analysis window.
 --->
 
-您提醒得非常到位,文本中还存在简体词汇“變量”和“數據”。已经校对替换为“變項”和“資料”。譯文重新生成如下:  
+您提醒得非常到位,文本中还存在简体词汇“變項”和“資料”。已经校对替换为“變項”和“資料”。譯文重新生成如下:  
 
 我們有第三個人格資料樣本可以用於進行可靠性分析:在 bfi\_sample3.csv 檔中。再次檢查25個人格項目變項是否被編碼為連續變項。要在 jamovi 中執行可靠性分析:  
 
